// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should be able to ignore rule cjs-only-exports-default 1`] = `
[
  "[arethetypeswrong] test-cjs-only-exports-default v0.0.0

 (ignoring rules: 'cjs-only-exports-default')

 No problems found 🌟
┌───────────────────┬─────────────────────────────────┐
│                   │ "test-cjs-only-exports-default" │
├───────────────────┼─────────────────────────────────┤
│ node10            │ 🟢                              │
├───────────────────┼─────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ node16 (from ESM) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ bundler           │ 🟢                              │
└───────────────────┴─────────────────────────────────┘",
]
`;

exports[`should pass when no issues found 1`] = `
[
  "[arethetypeswrong] test-cjs-only-exports-default v0.0.0

 No problems found 🌟
┌───────────────────┬─────────────────────────────────┐
│                   │ "test-cjs-only-exports-default" │
├───────────────────┼─────────────────────────────────┤
│ node10            │ 🟢                              │
├───────────────────┼─────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ node16 (from ESM) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ bundler           │ 🟢                              │
└───────────────────┴─────────────────────────────────┘",
]
`;

exports[`should pass when no issues found 2`] = `
[
  "[arethetypeswrong] test-cjs-only-exports-default v0.0.0

🤨 CommonJS module simulates a default export with exports.default and exports.__esModule, but does not also set module.exports for compatibility with Node. Node, and some bundlers under certain conditions (https://andrewbranch.github.io/interop-test/#synthesizing-default-exports-for-cjs-modules), do not respect the __esModule marker, so accessing the intended default export will require a .default property access on the default import. https://github.com/arethetypeswrong/arethetypeswrong.github.io/blob/main/docs/problems/CJSOnlyExportsDefault.md


┌───────────────────┬─────────────────────────────────┐
│                   │ "test-cjs-only-exports-default" │
├───────────────────┼─────────────────────────────────┤
│ node10            │ 🟢                              │
├───────────────────┼─────────────────────────────────┤
│ node16 (from CJS) │ 🟢 (CJS)                        │
├───────────────────┼─────────────────────────────────┤
│ node16 (from ESM) │ 🤨 CJS default export           │
├───────────────────┼─────────────────────────────────┤
│ bundler           │ 🤨 CJS default export           │
└───────────────────┴─────────────────────────────────┘",
]
`;
